# Gielda

./: CMakeLists.txt
dane/: startowe_dane.txt  zapis_v2.txt
src/: app.cpp  app.h  gra.cpp  gra.h  gracz.cpp  gracz.h  main.cpp  obiekty_transakcji.h  zapis_wczyt.cpp  zapis_wczyt.h
